<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.tigro.lajoie.screens.auth.AuthViewModel" />

        <import type="android.view.View" />

        <import type="com.tigro.lajoie.utils.ApiStatus" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.auth.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:paddingBottom="8dp">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/consultation" />

            <TextView
                style="@style/DisplaySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/login_welcome" />

            <TextView
                style="@style/BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/login_sub" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:onTextChanged="@{() -> viewModel.clearError()}"
                    android:text="@={viewModel.email}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/login_error"
                android:visibility="@{viewModel.status == ApiStatus.FAILED ? View.VISIBLE : View.GONE}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/register_btn"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/btn_register" />

                <Button
                    android:id="@+id/login_btn"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:enabled="@{viewModel.email.trim().empty || viewModel.password.trim().empty ? false : true}"
                    android:text="@string/btn_login" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>
