<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.tigro.lajoie.screens.wall.WallViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.wall.WallCreateFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                tools:title="test" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:paddingBottom="70dp">

                <TextView
                    android:id="@+id/menu_title"
                    style="@style/DisplaySmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wall_create_display" />

                <TextView
                    style="@style/BodyLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wall_create_helper" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_title"
                        android:text="@={viewModel.title}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:hint="@string/hint_question_details"
                        android:inputType="textMultiLine"
                        android:text="@={viewModel.detail}" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:enabled="@{viewModel.title.trim().empty || viewModel.detail.trim().empty ? false : true}"
                    android:text="@string/wall_create_button"
                    app:icon="@drawable/ic_send"
                    app:iconGravity="end" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>


