<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.tigro.lajoie.screens.submission.SubmissionViewModel" />

        <import type="android.view.View" />

        <import type="com.tigro.lajoie.utils.ApiStatus" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:title="" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">


                <TextView
                    style="@style/DisplaySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submission_display" />

                <TextView
                    style="@style/LabelLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/hint_experience" />


                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputFilledStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="200"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:paddingTop="12dp"
                        android:text="@={viewModel.experience}" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    style="@style/LabelLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/hint_document" />

                <ImageView
                    imageUrl="@{viewModel.cdn}"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:background="#F0F0F0"
                    android:importantForAccessibility="no" />

                <Button
                    android:id="@+id/btn_file_upload"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_file" />

                <Button
                    android:id="@+id/btn_send_submission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/submission_btn" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>